--- a/internal/projects/bulleit/Stamped/SharingSettingsViewController.xib
+++ b/internal/projects/bulleit/Stamped/SharingSettingsViewController.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="739011000"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="320754125"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,6 +58,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, -316}, {320, 365}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="145042037"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -72,6 +74,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 7}, {69, 30}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="317081720"/>
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -117,6 +120,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{125, 14}, {70, 20}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="666428538"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -136,6 +140,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 16}, {310, 65}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="912301091"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<int key="IBUIContentMode">1</int>
@@ -151,6 +156,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 39}, {24, 18}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="991665588"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -172,6 +178,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 37}, {138, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="201856794"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -205,6 +212,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 46}, {123, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="123477378"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -244,6 +252,7 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{210, 31}, {90, 33}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="702331027"/>
 								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -287,6 +296,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 89}, {310, 65}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="617803650"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<int key="IBUIContentMode">1</int>
@@ -299,6 +309,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 112}, {18, 18}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="494192250"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -318,6 +329,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 110}, {138, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="819040179"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -342,6 +354,7 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{210, 104}, {90, 33}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -366,6 +379,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 119}, {123, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="202498133"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -394,6 +408,7 @@
 						</array>
 						<string key="NSFrame">{{0, 45}, {320, 415}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1047942362"/>
 						<string key="NSReuseIdentifierKey">_NS:174</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -404,6 +419,7 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="466888643"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -489,6 +505,14 @@
 						<reference key="destination" ref="819040179"/>
 					</object>
 					<int key="connectionID">47</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">scrollView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="666428538"/>
+					</object>
+					<int key="connectionID">53</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -666,9 +690,88 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">52</int>
+			<int key="maxID">53</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">SharingSettingsViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="fbButtonPressed:">id</string>
+						<string key="settingsButtonPressed:">id</string>
+						<string key="twitterButtonPressed:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="fbButtonPressed:">
+							<string key="name">fbButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="settingsButtonPressed:">
+							<string key="name">settingsButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="twitterButtonPressed:">
+							<string key="name">twitterButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="fbConnectButton">UIButton</string>
+						<string key="fbIconView">UIImageView</string>
+						<string key="fbLabel">UILabel</string>
+						<string key="fbNameLabel">UILabel</string>
+						<string key="scrollView">UIScrollView</string>
+						<string key="twitterConnectButton">UIButton</string>
+						<string key="twitterIconView">UIImageView</string>
+						<string key="twitterLabel">UILabel</string>
+						<string key="twitterNameLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="fbConnectButton">
+							<string key="name">fbConnectButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="fbIconView">
+							<string key="name">fbIconView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="fbLabel">
+							<string key="name">fbLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="fbNameLabel">
+							<string key="name">fbNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="twitterConnectButton">
+							<string key="name">twitterConnectButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="twitterIconView">
+							<string key="name">twitterIconView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="twitterLabel">
+							<string key="name">twitterLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="twitterNameLabel">
+							<string key="name">twitterNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SharingSettingsViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
